syntax = "proto3";

package daprexamples;

option java_outer_classname = "DataToPublishProtos";
option java_package = "generate.protos";

message StorageReduceData {
	string ProductID = 1;
	int32 Amount=2;
}